# MOK

./: .gitignore  Makefile  README
report/: Makefile
report/graphics/dia/: AM1.dia  AM2.dia  broke-chan.dia  broke-graph.dia  broke-proc.dia  graphAM1.dia  graphAM2.dia  main.dia
report/graphics/exp/: exp1.exp  exp2.exp  exp3.exp  exp4.exp
report/tex/: 00-task.tex  preamble-std.tex  rpz.tex
src/: GUI.hs  MOK.cabal  Main  Main.hs  Test.hs
src/Model/: Imitational.hs  Model.hs  Theoretical.hs
